name:                id3rd
version:             0.1.1.0
synopsis:            Read ID3 tag frames from an MP3 file.
description:
        This tool reads ID3 tag frames from an MP3 file,
        outputting them in a way that preserves maximal
        useful information and is formatted for easy use in
        scripts. It supports the subset of tag frames parsed
        by the `idiii` package. Large blobs generally are
        not parsed and reported in detail.

homepage:            http://github.com/BartMassey/id3rd
license:             MIT
license-file:        COPYING
author:              Bart Massey
maintainer:          bart.massey@gmail.com
copyright:           Copyright © 2011 Bart Massey
category:            Tools
build-type:          Simple
cabal-version:       >= 1.8

executable id3rd
  main-is:             id3rd.hs
  build-depends:       base >= 4 && < 5,
                       containers < 1,
                       idiii >= 0.1.2 && < 0.2,
                       parseargs >= 0.1.3 && < 0.2
